--- a/nuxt-website/package.json
+++ b/nuxt-website/package.json
@@ -10,17 +10,19 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "deploy": "gh-pages -d dist"
+    "deploy": "nuxt generate && gh-pages -d .output/public"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.17",
     "nuxt": "^3.16.1",
-    "tailwindcss": "^4.0.17",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.13.2",
     "@types/node": "^22.13.14",
-    "gh-pages": "^6.3.0"
+    "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
