--- a/nuxt-website/tsconfig.json
+++ b/nuxt-website/tsconfig.json
@@ -1,4 +1,24 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json"
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@/*": [
+        "nuxt-website/*"
+      ]
+    },
+    "moduleResolution": "node"
+  },
+  "include": [
+    "nuxt-website/**/*.ts", // Make sure this is pointing to the correct folder
+    "nuxt-website/**/*.vue"
+  ],
+  "extends": "./.nuxt/tsconfig.json",
+  "exclude": [
+    "**/node_modules",
+    "**/dist",
+    "**/.nuxt",
+    "**/.output",
+    "**/build"
+  ]
 }
