--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "nuxt": "^3.16.1",
     "vue": "^3.5.13",
+    "vue-i18n": "^10.0.6",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@nuxt/content": "^3.4.0",
+    "@nuxtjs/i18n": "^9.4.0",
     "@nuxtjs/tailwindcss": "^6.13.2",
     "@types/node": "^22.13.14",
     "autoprefixer": "^10.4.21",
